--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "webpack-dev-server": "^5.1.0"
   },
@@ -32,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.25.7",
     "cross-env": "^7.0.3"
   }
